# practicerepo

./: .flake8  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/docs/: CODEOWNERS  pull_request_template.md
.github/workflows/: workflow.yml
.tekton/: eventlistener.yaml  pipeline.yaml  tasks.yaml  triggertemplate.yaml
aws/: t2-micro-key.pem
k8s/: el-cd-listener-svc.yaml
k8s/secrets/: default-secret.yaml
k8s/serviceAccount/: role-binding.yaml  serviceAccount.yaml
src/api/: __init__.py  main.py
src/api/config/: __init__.py  default.py  local.py  prod.py  qa.py
src/api/controller/: health_controller.py
src/api/model/: health_check.py
src/api/repository/: user_repository.py
src/api/service/: health_service.py
tests/: test_health_controller.py  test_health_service.py  test_user_repository.py
